--- a/test/fr/accueilFR.html
+++ b/test/fr/accueilFR.html
@@ -120,7 +120,7 @@
     <div class="page"></div>
 
     <section class="nav">
-        <h3>Notre activité</h3>
+        <h3 class="correction">Notre activité</h3>
         <div class="fond">
             <div class="déco">
                 <div class="sphère"></div>
