--- a/test/fr/appli.html
+++ b/test/fr/appli.html
@@ -8,10 +8,10 @@
     <title>Servithen</title>
     <link rel="shortcut icon" href="/img/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
-    <link rel="stylesheet" href="../cssFR/appli.css">
+    <link rel="stylesheet" href="/fr/cssFR/appli.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/fr/jsFR/confianceFR.js"></script>
+    <script src="/fr/jsFR/appliFR.js"></script>
 
 </head>
 
@@ -23,11 +23,9 @@
 
             <a href="/fr/index.html"><img class="logo" src="/img/logo.png" alt="logo Servithen"></a>
 
-            <a href="/fr/accueilFR.html"><img class="logo" src="/fr/img/logo.png " alt="logo Servithen"></a>
+            <a href="/fr/appliFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-            <a href="/fr/accueilFR.html"><img class="langage" src="/fr/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
-
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/fr/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+            <a href="/en/appliEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
 
@@ -100,12 +98,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Decrouvrez notre application: <br>
             </p>
         </div>
         <div id="nomAppli">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 MyPartner.
             </p>
         </div>
@@ -114,7 +112,7 @@
 
     <div class="page"></div>
 
-
+    <section>
     <div id="containerAppli">
         <h1>Qu'est ce que MyPartner :</h1>
         <div id="videoPres">
@@ -139,6 +137,7 @@
         <a target="_blank" href="https://play.google.com/store/apps/details?id=com.industriesolution.mypartner&hl=fr&gl=IL"> <img src="/img/play-store.png" alt="google play store"></a>
 
     </div>
+    </section>
     <div id="caroussel">
         <div class="container2">
             <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
@@ -148,7 +147,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos2 slider2">
+            <div id="Partenaire" class="customer-logos2 slider2">
                 <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
@@ -166,7 +165,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos slider">
+            <div id="Confiance" class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
                 <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
