--- a/test/fr/pourquoiServithenFR.html
+++ b/test/fr/pourquoiServithenFR.html
@@ -25,24 +25,25 @@
 
             <a href="/fr/index.html"><img class="logo" src="/img/logo.png" alt="logo Servithen"></a>
 
-            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
+            <a href="/fr/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
-            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+            <a href="/en/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
 
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/servithenFR/htmlFR/formFR.html">NOUS CONTACTER</a>
+                <a class="MenuBtn" href="/fr/formFR.html">NOUS CONTACTER</a>
 
             </div>
+
 
             <div class="dropdown">
                 <button class="dropbtn">INDUSTRIE 4.0 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenFR/htmlFR/appli.html">MyPartner</a>
-                    <a href="/servithenFR/htmlFR/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
+                    <a href="/fr/appli.html">MyPartner</a>
+                    <a href="/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
                 </div>
             </div>
 
@@ -50,11 +51,11 @@
                 <button class="dropbtn">SERVICES 
               </button>
                 <div class="dropdown-content3">
-                    <a href="serviceFR/service1.html">Audits et Expertises d’installations</a>
-                    <a href="serviceFR/service2.html">Remise aux normes réglementaire </a>
-                    <a href="serviceFR/service3.html">Valorisation énergétique</a>
-                    <a href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                    <a href="serviceFR/service5.html">Maintenance préventive / curative</a>
+                    <a href="/fr/serviceFR/service1.html">Audits et Expertises d’installations</a>
+                    <a href="/fr/serviceFR/service2.html">Remise aux normes réglementaire </a>
+                    <a href="/fr/serviceFR/service3.html">Valorisation énergétique</a>
+                    <a href="/fr/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="/fr/serviceFR/service5.html">Maintenance préventive / curative</a>
                 </div>
             </div>
 
@@ -62,14 +63,14 @@
                 <button class="dropbtn">PRODUITS 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenFR/htmlFR//ProduitFR.html/ToursDeLavageFR.html">Tours de lavage</a>
-                    <a href="/servithenFR/htmlFR//ProduitFR.html/VenturiFR.html">Venturi</a>
-                    <a href="/servithenFR/htmlFR//ProduitFR.html/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-                    <a href="/servithenFR/htmlFR//ProduitFR.html/FiltresManchesFR.html">Filtres à manches</a>
-                    <a href="/servithenFR/htmlFR//ProduitFR.html/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                    <a href="/servithenFR/htmlFR//ProduitFR.html/InstallationsFR.html">Installations « Clés en mains »</a>
-                    <a href="/servithenFR/htmlFR//ProduitFR.html/RecuperationEnergiFR.html">Récupération d’énergie</a>
-                    <a href="/servithenFR/htmlFR//ProduitFR.html/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
+                    <a href="/fr/ProduitFR/ToursDeLavageFR.html">Tours de lavage</a>
+                    <a href="/fr/ProduitFR/VenturiFR.html">Venturi</a>
+                    <a href="/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                    <a href="/fr/ProduitFR/FiltresManchesFR.html">Filtres à manches</a>
+                    <a href="/fr/ProduitFR/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                    <a href="/fr/ProduitFR/InstallationsFR.html">Installations « Clés en mains »</a>
+                    <a href="/fr/ProduitFR/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                    <a href="/fr/ProduitFR/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                 </div>
             </div>
 
@@ -77,18 +78,21 @@
                 <button class="dropbtn">SAVOIR-FAIRE 
               </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenFR/htmlFR/presentationFR.html">Notre métier</a>
-                    <a href="/servithenFR/htmlFR/pourquoiServithenFR.html">Pourquoi Servithen</a>
-                    <a href="/servithenFR/htmlFR/notreEngagementFR.html">Notre engagement</a>
+                    <a href="/fr/presentationFR.html">Notre métier</a>
+                    <a href="/fr/pourquoiServithenFR.html">Pourquoi Servithen</a>
+                    <a href="/fr/notreEngagementFR.html">Notre engagement</a>
                 </div>
             </div>
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/servithenFR/htmlFR/accueilFR.html">ACCUEIL</a>
+                <a class="MenuBtn" href="/fr/accueilFR.html">ACCUEIL</a>
 
             </div>
+
         </div>
+
+    </div>
 
 
 
