--- a/test/fr/formFR.html
+++ b/test/fr/formFR.html
@@ -34,16 +34,17 @@
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="formFR.html">NOUS CONTACTER</a>
+                <a class="MenuBtn" href="/fr/formFR.html">NOUS CONTACTER</a>
 
             </div>
+
 
             <div class="dropdown">
                 <button class="dropbtn">INDUSTRIE 4.0 
               </button>
                 <div class="dropdown-content3">
-                    <a href="appli.html">MyPartner</a>
-                    <a href="SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
+                    <a href="/fr/appli.html">MyPartner</a>
+                    <a href="/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
                 </div>
             </div>
 
@@ -51,11 +52,11 @@
                 <button class="dropbtn">SERVICES 
               </button>
                 <div class="dropdown-content3">
-                    <a href="serviceFR/service1.html">Audits et Expertises d’installations</a>
-                    <a href="serviceFR/service2.html">Remise aux normes réglementaire </a>
-                    <a href="serviceFR/service3.html">Valorisation énergétique</a>
-                    <a href="serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                    <a href="serviceFR/service5.html">Maintenance préventive / curative</a>
+                    <a href="/fr/serviceFR/service1.html">Audits et Expertises d’installations</a>
+                    <a href="/fr/serviceFR/service2.html">Remise aux normes réglementaire </a>
+                    <a href="/fr/serviceFR/service3.html">Valorisation énergétique</a>
+                    <a href="/fr/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="/fr/serviceFR/service5.html">Maintenance préventive / curative</a>
                 </div>
             </div>
 
@@ -63,14 +64,14 @@
                 <button class="dropbtn">PRODUITS 
               </button>
                 <div class="dropdown-content3">
-                    <a href="ProduitFR/ToursDeLavageFR.html">Tours de lavage</a>
-                    <a href="ProduitFR/VenturiFR.html">Venturi</a>
-                    <a href="ProduitFR/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-                    <a href="ProduitFR/FiltresManchesFR.html">Filtres à manches</a>
-                    <a href="ProduitFR/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                    <a href="ProduitFR/InstallationsFR.html">Installations « Clés en mains »</a>
-                    <a href="ProduitFR/RecuperationEnergiFR.html">Récupération d’énergie</a>
-                    <a href="ProduitFR/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
+                    <a href="/fr/ProduitFR/ToursDeLavageFR.html">Tours de lavage</a>
+                    <a href="/fr/ProduitFR/VenturiFR.html">Venturi</a>
+                    <a href="/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
+                    <a href="/fr/ProduitFR/FiltresManchesFR.html">Filtres à manches</a>
+                    <a href="/fr/ProduitFR/EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                    <a href="/fr/ProduitFR/InstallationsFR.html">Installations « Clés en mains »</a>
+                    <a href="/fr/ProduitFR/RecuperationEnergiFR.html">Récupération d’énergie</a>
+                    <a href="/fr/ProduitFR/FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
                 </div>
             </div>
 
@@ -78,19 +79,21 @@
                 <button class="dropbtn">SAVOIR-FAIRE 
               </button>
                 <div class="dropdown-content3">
-                    <a href="presentationFR.html">Notre métier</a>
-                    <a href="pourquoiServithenFR.html">Pourquoi Servithen</a>
-                    <a href="notreEngagementFR.html">Notre engagement</a>
+                    <a href="/fr/presentationFR.html">Notre métier</a>
+                    <a href="/fr/pourquoiServithenFR.html">Pourquoi Servithen</a>
+                    <a href="/fr/notreEngagementFR.html">Notre engagement</a>
                 </div>
             </div>
 
-
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/fr/index.html">ACCUEIL</a>
+                <a class="MenuBtn" href="/fr/accueilFR.html">ACCUEIL</a>
 
             </div>
+
         </div>
+
+    </div>
 
 
 
