last version test

--- a/test/en/appliEN.html
+++ b/test/en/appliEN.html
@@ -115,7 +115,7 @@
         <h1>What is MyPartner ?</h1>
         <div id="videoPres">
             <video width="500" height="320" controls>
-                <source src="/video/PrésentationMP.mp4" type="video/mp4">
+                <source src="/video/PresentationMP.mp4" type="video/mp4">
             </video>
         </div>
         <div id="pInfoAppli">
@@ -136,7 +136,7 @@
             <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
             <div class="déco">
                 <div class="sphère"></div>
-                <div class="transmission"></div>
+                
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
@@ -154,7 +154,7 @@
             <h3 class="text-center font-weight-bold">nous font confiance :</h3>
             <div class="déco">
                 <div class="sphère"></div>
-                <div class="transmission"></div>
+                
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
