--- a/test/en/formEN.html
+++ b/test/en/formEN.html
@@ -136,11 +136,11 @@
                 </div>
                 <div class="logoP">
                     <img class="logoInfo" src="/img/logoContact/logoTel.png" alt="logo telephone">
-                    <p>tél: 01 34 89 71 46</p>
+                    <p>tél: +33 1 34 89 71 46</p>
                 </div>
                 <div class="logoP">
                     <img class="logoInfo" src="/img/logoContact/logoMail.png" alt="logo de mail">
-                    <p>mail: info@Servithen.fr</p>
+                    <p>mail: info@servithen.fr</p>
                 </div>
                 <div class="logoP">
                     <img class="logoInfo" src="/img/logoContact/linkedin.png" alt="logo de linkedin">
@@ -154,8 +154,7 @@
     <!-- le google map -->
 
     <div>
-        <iframe id="mapGoogle" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2627.235857724453!2d1.9062641155682958!3d48.815561111675535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e69b2e4c101591%3A0x3c4b6015d2f3a5ea!2s8%20Rue%20Guillaume%20de%20Bois%20Nivard%2C%2078640%20Neauphle-le-Ch%C3%A2teau!5e0!3m2!1sfr!2sfr!4v1647355210357!5m2!1sfr!2sfr"
-            height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d656.8087538834243!2d1.907932729243734!3d48.81557718180245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e69b2e4914fd6f%3A0xefa5b210e1554b90!2sSERVITHEN!5e0!3m2!1sfr!2sfr!4v1648199096466!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
     <!-- Les partenaires et nous font confiance -->
@@ -166,7 +165,7 @@
             <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
             <div class="déco">
                 <div class="sphère"></div>
-                <div class="transmission"></div>
+                
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
@@ -184,7 +183,7 @@
             <h3 class="text-center font-weight-bold">nous font confiance :</h3>
             <div class="déco">
                 <div class="sphère"></div>
-                <div class="transmission"></div>
+                
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
