--- a/test/fr/appli.html
+++ b/test/fr/appli.html
@@ -23,7 +23,7 @@
 
         <div class="navbar">
 
-            <a href="/fr/index.html"><img class="logo" src="/img/logo.png" alt="logo Servithen"></a>
+            <a href="/index.html"><img class="logo" src="/img/logo.png" alt="logo Servithen"></a>
 
             <a href="appli.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
@@ -84,7 +84,7 @@
 
             <div class="dropdown">
 
-                <a class="MenuBtn" href="/fr/index.html">ACCUEIL</a>
+                <a class="MenuBtn" href="/index.html">ACCUEIL</a>
 
             </div>
         </div>
@@ -114,7 +114,7 @@
         <h1>Qu'est ce que MyPartner :</h1>
         <div id="videoPres">
             <video width="500" height="320" controls>
-                <source src="/video/PrésentationMP.mp4" type="video/mp4">
+                <source src="/video/PresentationMP.mp4" type="video/mp4">
             </video>
         </div>
         <div id="pInfoAppli">
@@ -139,7 +139,7 @@
             <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
             <div class="déco">
                 <div class="sphère"></div>
-                <div class="transmission"></div>
+                
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
@@ -157,7 +157,7 @@
             <h3 class="text-center font-weight-bold">nous font confiance :</h3>
             <div class="déco">
                 <div class="sphère"></div>
-                <div class="transmission"></div>
+                
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
