--- a/test/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html
+++ b/test/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/fr/jsFR/confianceFR.js"></script>
+    <script src="/fr/jsFR/ElectroFR.js"></script>
 
 </head>
 
@@ -109,12 +109,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
@@ -137,7 +137,9 @@
 
             </div>
             <div class="carrerimg">
-                <img class="imgBrochur" src="/img/20220310_152203741_iOS.jpeg" alt="brochure">
+                <div>
+                    <img class="imgBrochur" src="/img/20220310_152203741_iOS.jpeg" alt="brochure">
+                </div>
                 <p class="texteBroch">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti temporibus tempora consequatur autem, quas molestiae adipisci nulla exercitationem ex eos voluptate itaque labore delectus non? Fugit saepe ex dolore? Ducimus.</p>
                 <button class="btnPDF" onclick="window.open('/img/brochure/FicheLAVEURSDEFUMÉES.pdf','-_blank')">Afficher la brochure
                 </button>
@@ -159,7 +161,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos2 slider2">
+            <div id="Partenaire" class="customer-logos2 slider2">
                 <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
@@ -177,7 +179,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos slider">
+            <div id="Confiance" class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
                 <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
