--- a/test/fr/ProduitFR/modifVenturiFR.html
+++ b/test/fr/ProduitFR/modifVenturiFR.html
@@ -102,11 +102,11 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <textarea id="txtTitre" class="pTitre">
+            <textarea name="Titre" id="txtTitre" class="pTitre">
             </textarea>
         </div>
         <div id="soustxtAccueil">
-            <textarea id="stxtTitre" class="pTitre">
+            <textarea name="SousTitre" id="stxtTitre" class="pTitre">
             </textarea>
         </div>
         <textarea name="Backgroundimg" id="Background"></textarea>
