--- a/test/fr/ProduitFR/FiltresManchesFR.html
+++ b/test/fr/ProduitFR/FiltresManchesFR.html
@@ -108,12 +108,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
