--- a/test/en/formEN.html
+++ b/test/en/formEN.html
@@ -117,7 +117,7 @@
                     <p><input class="champSaisi" name="prenom" type="text" placeholder="First name :"></p>
                     <p><input class="champSaisi" name="email" type="email" placeholder="Email :"></p>
                     <p><input class="champSaisi" name="phone" type="tel" placeholder="Telephone :"></p>
-                    <p><input class="champSaisi" name="societe" type="text" placeholder="Society :"></p>
+                    <p><input class="champSaisi" name="societe" type="text" placeholder="Company :"></p>
                     <p><textarea name="message" id="message" cols="65" rows="10" placeholder="Message"></textarea></p>
                     <input type="submit" value="Envoyer">
                 </fieldset>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="logoP">
                     <img class="logoInfo" src="/img/logoContact/logoTel.png" alt="logo telephone">
-                    <p>tél: +33 1 34 89 71 46</p>
+                    <p>tel: +33 1 34 89 71 46</p>
                 </div>
                 <div class="logoP">
                     <img class="logoInfo" src="/img/logoContact/logoMail.png" alt="logo de mail">
