--- a/test/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html
+++ b/test/fr/ProduitFR/ElectrofiltresHumidesSecsFR.html
@@ -34,70 +34,7 @@
 
                 <a href="/en/ProduitEN/ElectrofiltresHumidesSecsEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
 
-
-              
-
-
-<<<<<<< HEAD
                 <div class="dropdown">
-=======
-<div class="dropdown">
-
-    <a class="MenuBtn" href="/fr/formFR.html">NOUS CONTACTER</a>
-
-</div>
-
-
-<div class="dropdown">
-    <button class="dropbtn">INDUSTRIE 4.0 
-  </button>
-    <div class="dropdown-content3">
-        <a href="/fr/appli.html">MyPartner</a>
-        <a href="/fr/SolutionConnecteeGestionDistanceFR.html">Solution connectée de gestion à distance</a>
-    </div>
-</div>
-
-<div class="dropdown">
-    <button class="dropbtn">SERVICES 
-  </button>
-    <div class="dropdown-content3">
-        <a href="/fr/serviceFR/service1.html">Audits et Expertises d’installations</a>
-        <a href="/fr/serviceFR/service2.html">Remise aux normes réglementaire </a>
-        <a href="/fr/serviceFR/service3.html">Valorisation énergétique</a>
-        <a href="/fr/serviceFR/service4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-        <a href="/fr/serviceFR/service5.html">Maintenance préventive / curative</a>
-    </div>
-</div>
-
-<div class="dropdown">
-    <button class="dropbtn">PRODUITS 
-  </button>
-    <div class="dropdown-content3">
-        <a href="ToursDeLavageFR.html">Tours de lavage</a>
-        <a href="VenturiFR.html">Venturi</a>
-        <a href="ElectrofiltresHumidesSecsFR.html">Electrofiltres humides / secs</a>
-        <a href="FiltresManchesFR.html">Filtres à manches</a>
-        <a href="EquipementsDosageInjectionDePoudresFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-        <a href="InstallationsFR.html">Installations « Clés en mains »</a>
-        <a href="RecuperationEnergiFR.html">Récupération d’énergie</a>
-        <a href="FourniturePiecesRechangeFR.html">Fourniture de pièces de rechange</a>
-    </div>
-</div>
-
-<div class="dropdown">
-    <button class="dropbtn">SAVOIR-FAIRE 
-  </button>
-    <div class="dropdown-content3">
-        <a href="/fr/presentationFR.html">Notre métier</a>
-        <a href="/fr/pourquoiServithenFR.html">Pourquoi Servithen</a>
-        <a href="/fr/notreEngagementFR.html">Notre engagement</a>
-    </div>
-</div>
-
-<div class="dropdown">
-
-    <a class="MenuBtn" href="/index.html">ACCUEIL</a>
->>>>>>> branchOk
 
                     <a class="MenuBtn" href="/fr/formFR.html">NOUS CONTACTER</a>
     
@@ -196,11 +133,12 @@
 
             </div>
             <div class="carrerimg">
-                <div>
-                    <img class="imgBrochur" src="/img/20220310_152203741_iOS.jpeg" alt="brochure">
+                <div id="imgProduit">
+                    <img class="imgBrochur">
                 </div>
-                <p class="texteBroch">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti temporibus tempora consequatur autem, quas molestiae adipisci nulla exercitationem ex eos voluptate itaque labore delectus non? Fugit saepe ex dolore? Ducimus.</p>
-                <button class="btnPDF" onclick="window.open('/img/brochure/FicheLAVEURSDEFUMÉES.pdf','-_blank')">Afficher la brochure
+                <p id="txtProduit" class="texteBroch"></p>
+                <button class="btnPDF">
+                    <a id="lienProduit" class="DL" target="_blank">Afficher la brochure</a>
                 </button>
             </div>
 
@@ -265,7 +203,7 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone"></a>
+                <a id="Telephone" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
@@ -280,7 +218,7 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank"></a>
+                <a id="Local" target="_blank" class="footerp"></a>
 
             </div>
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
