--- a/test/fr/ProduitFR/RecuperationEnergiFR.html
+++ b/test/fr/ProduitFR/RecuperationEnergiFR.html
@@ -24,11 +24,10 @@
 
             <div class="navbar">
 
-
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
-
                 <a href="/servithenFR/htmlFR/ProduitFR.html/RecuperationEnergiFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
+                <a href="/servithenEN/htmlEN/ProduitEN.html/ToursDeLavageEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
+                
                 <a href="/index.html"><img class="logo" src="/img/logo.png" alt="logo Servithen"></a>
 
 
@@ -177,7 +176,7 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone"></a>
+                <a id="Telephone" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
@@ -192,7 +191,7 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank"></a>
+                <a id="Local" target="_blank" class="footerp"></a>
 
             </div>
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
