--- a/test/fr/ProduitFR/FiltresManchesFR.html
+++ b/test/fr/ProduitFR/FiltresManchesFR.html
@@ -136,9 +136,12 @@
 
             </div>
             <div class="carrerimg">
-                <img class="imgBrochur" src="/img/20220310_152203741_iOS.jpeg" alt="brochure">
-                <p class="texteBroch">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti temporibus tempora consequatur autem, quas molestiae adipisci nulla exercitationem ex eos voluptate itaque labore delectus non? Fugit saepe ex dolore? Ducimus.</p>
-                <button class="btnPDF" onclick="window.open('/img/brochure/FicheLAVEURSDEFUMÉES.pdf','-_blank')">Afficher la brochure
+                <div id="imgProduit">
+                    <img class="imgBrochur">
+                </div>
+                <p id="txtProduit" class="texteBroch"></p>
+                <button class="btnPDF">
+                    <a id="lienProduit" class="DL" target="_blank">Afficher la brochure</a>
                 </button>
             </div>
 
@@ -157,7 +160,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos2 slider2">
+            <div id="Partenaire" class="customer-logos2 slider2">
                 <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
@@ -175,7 +178,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos slider">
+            <div id="Confiance" class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
                 <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
@@ -202,7 +205,7 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone"></a>
+                <a id="Telephone" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
@@ -217,7 +220,7 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank"></a>
+                <a id="Local" target="_blank" class="footerp"></a>
 
             </div>
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
