--- a/test/fr/ProduitFR/InstallationsFR.html
+++ b/test/fr/ProduitFR/InstallationsFR.html
@@ -24,7 +24,7 @@
 
             <div class="navbar">
 
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
+                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logo.png" alt="logo Servithen"></a>
 
                 <a href="/fr/serviceFR/service1.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
     
@@ -152,7 +152,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <section class="customer-logos2 slider2">
+            <section id="Partenaire" class="customer-logos2 slider2">
             </section>
         </div>
 
@@ -160,7 +160,7 @@
 
         <div class="container">
             <h2 class="text-center font-weight-bold">nous font confiance :</h2>
-            <section class="customer-logos slider">
+            <section id="Confiance" class="customer-logos slider">
             </section>
         </div>
 
@@ -176,7 +176,7 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone"></a>
+                <a id="Telephone" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
@@ -191,7 +191,7 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank"></a>
+                <a id="Local" target="_blank" class="footerp"></a>
 
             </div>
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
