--- a/test/fr/ProduitFR/VenturiFR.html
+++ b/test/fr/ProduitFR/VenturiFR.html
@@ -24,9 +24,6 @@
 
             <div class="navbar">
 
-
-                <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logoSite/logo.png " alt="logo Servithen"></a>
-
                 <a href="/servithenFR/htmlFR/ProduitFR.html/VenturiFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr" /></a>
 
                 <a href="/servithenEN/htmlEN/ProduitEN.html/VenturiEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en" /></a>
@@ -178,7 +175,7 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone"></a>
+                <a id="Telephone" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
@@ -193,7 +190,7 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank"></a>
+                <a id="Local" target="_blank" class="footerp"></a>
 
             </div>
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
