--- a/test/fr/appli.html
+++ b/test/fr/appli.html
@@ -191,12 +191,12 @@
 
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoTelW.png">
-                <a id="Telephone"></a>
+                <a id="Telephone" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoMailW.png">
-                <a id="Mail" class="footerp"></a>
+                <a id="Mail" class="footerp" class="footerp"></a>
             </div>
             <br>
             <div class="foter">
@@ -206,7 +206,7 @@
             <br>
             <div class="foter">
                 <img class="logoinfo" src="/img/LogoFooter/logoPosW.png">
-                <a id="Local" target="_blank"></a>
+                <a id="Local" target="_blank" class="footerp"></a>
 
             </div>
             <p class="Copyright">&copy; Copyright 1986 - 2022 | SERVITHEN | Tous droits réservés | <a class="Copyright" href="/servithenFR/htmlFR/MentionsLegales.html">Mentions légales</a> </p>
