Intégration admin en cours

--- a/test/fr/SolutionConnecteeGestionDistanceFR.html
+++ b/test/fr/SolutionConnecteeGestionDistanceFR.html
@@ -146,7 +146,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos2 slider2">
+            <div id="Partenaire" class="customer-logos2 slider2">
                 <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
@@ -164,7 +164,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos slider">
+            <div id="Confiance" class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
                 <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
