--- a/test/fr/ProduitFR/InstallationsFR.html
+++ b/test/fr/ProduitFR/InstallationsFR.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/fr/jsFR/confianceFR.js"></script>
+    <script src="/securite/jsFR/InstallationFR.js"></script>
 
 </head>
 
@@ -108,12 +108,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
@@ -125,7 +125,7 @@
     <div class="page"></div>
     <section class="nav">
         <div class="fondBroch">
-            <h3>Installations « Clés en mains »</h3>
+            <h3 class="headtitle">Installations « Clés en mains »</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 
@@ -157,7 +157,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos2 slider2">
+            <div id="Partenaire" class="customer-logos2 slider2">
                 <div class="slide2"><img src="/img/partenaire/lechler_logo.png" alt="logo partenaire lechler"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-neu-process.png" alt="logo partenaire NEU JKF"></div>
                 <div class="slide2"><img src="/img/partenaire/logo-Siemens.png" alt="logo partenaire siemens"></div>
@@ -175,7 +175,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <div class="customer-logos slider">
+            <div id="Confiance" class="customer-logos slider">
                 <div class="slide"><img src="/img/LogoConfiance/artelia.png" alt="logo confiance artelia"></div>
                 <div class="slide"><img src="/img/LogoConfiance/guerbet.png" alt="logo confiance guerbet"></div>
                 <div class="slide"><img src="/img/LogoConfiance/logo-constellium.png" alt="logo confiance constellium"></div>
@@ -202,22 +202,22 @@
 
         <div class="foter">
             <img class="logoinfo" src="/img/LogoFooter/logoTelW.png" alt="logo telephone ">
-            <a class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+            <a id="Telephone" class="footerp" href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
         </div>
         <br>
         <div class="foter">
             <img class="logoinfo" src="/img/LogoFooter/logoMailW.png" alt="logo mail ">
-            <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+            <a id="Mail" class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
         </div>
         <br>
         <div class="foter">
             <img class="logoinfo" src="/img/LogoFooter/linkedinW.png" alt="logo linkedin ">
-            <a target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
+            <a id="Linkedin" target="_blank" class="footerp" href="https://www.linkedin.com/company/servithen/">SERVITHEN</a>
         </div>
         <br>
         <div class="foter">
             <img class="logoinfo" src="/img/LogoFooter/logoPosW.png" alt="logo position ">
-            <a class="footerp" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
+            <a id="Local" class="footerp" target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">
                         8 Rue Guillaume de Bois Nivard,<br> 78640 Neauphle-le-Château</a>
 
         </div>
